force-app/main/default/objects/Financial_Campaign_Config__mdt/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>