force-app/main/default/objects/Financial_Campaign_Config__mdt/fields/Has_Year__c.field-meta.xml
<CustomField>
    <fullName>Has_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Year</label>
    <type>Checkbox</type>
</CustomField>