force-app/main/default/objects/Financial_Campaign_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Campaign_Name__c</columns>
    <columns>Type__c</columns>
    <columns>SubType__c</columns>
    <columns>Detail__c</columns>
    <columns>Has_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>